...

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/layoutInfoo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
...
                        tools:text="TextView" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/sendDataBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Send Sensor Data" />

            <ListView
                android:id="@+id/cityList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="48dp"
                tools:listitem="@layout/item_city">
...
