...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btnBack"
        android:icon="?attr/homeAsUpIndicator"
        android:title="Item"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/btnSearch"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"

...
    <item
        android:id="@+id/btnCity"
        android:icon="@drawable/ic_action_name"
        android:title="btnCity"
        app:showAsAction="always" />
    <item
        android:id="@+id/btnSettings"
        android:icon="@drawable/icon_settings"
        android:title="Item"
        app:showAsAction="always" />
</menu>
